server: move title formatting out of repository
